Etapa EDA Inferencial Finalizada -> arquivo 02_eda_inferencial.ipynb -> arquivo eda_inferencial.md -> arquivo 03_preprocesing_pipeline.ipynb criado e em andamento

--- a/notebooks/03_preprocessing_pipeline.ipynb
+++ b/notebooks/03_preprocessing_pipeline.ipynb
@@ -2,18 +2,433 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af81a2e2",
+   "id": "150608e0",
    "metadata": {},
    "source": [
-    "<a href=\"../../README.md\" title=\"Voltar para a página principal\">\n",
+    "# 03 - ré-Processamento e Construção do Pipeline (scikit-learn)\n",
+    "\n",
+    "<a href=\"../README.md\" title=\"Voltar para a página principal\">\n",
     "🏠 Voltar para Home\n",
     "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a92de7f",
+   "metadata": {},
+   "source": [
+    "## Visão Geral\n",
+    "\n",
+    "Este notebook implementa o *pré-processamento completo* do dataset para modelos de Machine Learning, seguindo boas práticas recomendadas pela biblioteca scikit-learn.\n",
+    "\n",
+    "## O pipeline final incluirá:\n",
+    "\n",
+    "1. Separação entre features numéricas e categóricas\n",
+    "2. Imputação de valores ausentes\n",
+    "3. Codificação de variáveis categóricas (One-Hot Encoding)\n",
+    "4. Padronização de variáveis numéricas\n",
+    "5. Montagem do ColumnTransformer\n",
+    "6. Geração do conjunto final X_prepared e y\n",
+    "\n",
+    "Este notebook prepara os dados para os próximos passos:\n",
+    "\n",
+    "- 04_modelos_classicos.ipynb\n",
+    "- 05_modelos_avancados.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6386f93",
+   "metadata": {},
+   "source": [
+    "# Importações"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8e71946c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import (\n",
+    "    StandardScaler,\n",
+    "    OneHotEncoder\n",
+    ")\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# Trabalho com html\n",
+    "from IPython.display import display, HTML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "265228c2",
+   "metadata": {},
+   "source": [
+    "# 1. Carregamento e Visualização Preliminar\n",
+    "\n",
+    "***Descrição:*** Utilizando o dataset de acompanhamento operacional dos pedidos tratados.\n",
+    "> **Arquivo e:** database/processed/acompanhamento_operacional_FE.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd588b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset carregado com sucesso!\n",
+      "Formato: (488398, 29)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sigla_cliente</th>\n",
+       "      <th>tipo_veiculo</th>\n",
+       "      <th>qtde_itens</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>peso</th>\n",
+       "      <th>m3</th>\n",
+       "      <th>uf</th>\n",
+       "      <th>fl_base</th>\n",
+       "      <th>representante</th>\n",
+       "      <th>flag_entrega_agendada</th>\n",
+       "      <th>...</th>\n",
+       "      <th>horas_conferencia</th>\n",
+       "      <th>horas_emissao</th>\n",
+       "      <th>horas_analise_producao</th>\n",
+       "      <th>horas_minuta</th>\n",
+       "      <th>horas_exped_minuta</th>\n",
+       "      <th>hora_analise_transporte</th>\n",
+       "      <th>lead_time_total_horas</th>\n",
+       "      <th>complexidade_operacional</th>\n",
+       "      <th>pedido_grande_flag</th>\n",
+       "      <th>processo_longo_flag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NTL</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>144.30</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NÃO DEFINIDO</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NTL</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130.30</td>\n",
+       "      <td>2.33</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NÃO DEFINIDO</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>234.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NTL</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97.00</td>\n",
+       "      <td>2.22</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SC CARGO TRANSPORTES LTDA</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>TRUCK 75 M3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>182.79</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>VELOMAX BRASIL TRANSPORTES LTD</td>\n",
+       "      <td>Não</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>266.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MMM</td>\n",
+       "      <td>TRUCK 70 M3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>25.50</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MFM TRANSPORTES</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>542.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sigla_cliente tipo_veiculo  qtde_itens  volume    peso    m3  uf  fl_base  \\\n",
+       "0           NTL  TRUCK 70 M3           1       1  144.30  2.10  MS        0   \n",
+       "1           NTL  TRUCK 70 M3           1       1  130.30  2.33  MS        0   \n",
+       "2           NTL  TRUCK 70 M3           1       1   97.00  2.22  SC        0   \n",
+       "3           MMM  TRUCK 75 M3           7      43  182.79  1.08  CE        0   \n",
+       "4           MMM  TRUCK 70 M3           4       9   25.50  0.07  CE        0   \n",
+       "\n",
+       "                    representante flag_entrega_agendada  ...  \\\n",
+       "0                    NÃO DEFINIDO                   Não  ...   \n",
+       "1                    NÃO DEFINIDO                   Não  ...   \n",
+       "2       SC CARGO TRANSPORTES LTDA                   Não  ...   \n",
+       "3  VELOMAX BRASIL TRANSPORTES LTD                   Não  ...   \n",
+       "4                 MFM TRANSPORTES                   Sim  ...   \n",
+       "\n",
+       "  horas_conferencia  horas_emissao  horas_analise_producao  horas_minuta  \\\n",
+       "0               0.0            0.0                    22.0           0.0   \n",
+       "1               0.0            0.0                    22.0           0.0   \n",
+       "2               0.0            0.0                     0.0           0.0   \n",
+       "3               1.0            0.0                    11.0          99.0   \n",
+       "4               1.0            0.0                    12.0         172.0   \n",
+       "\n",
+       "   horas_exped_minuta  hora_analise_transporte  lead_time_total_horas  \\\n",
+       "0                16.0                    161.0                  229.0   \n",
+       "1                16.0                    165.0                  234.0   \n",
+       "2                16.0                     40.0                  249.0   \n",
+       "3                 8.0                     93.0                  266.0   \n",
+       "4                16.0                    285.0                  542.0   \n",
+       "\n",
+       "   complexidade_operacional  pedido_grande_flag  processo_longo_flag  \n",
+       "0                         1                   0                    0  \n",
+       "1                         1                   0                    0  \n",
+       "2                         1                   0                    0  \n",
+       "3                         7                   1                    0  \n",
+       "4                         4                   1                    1  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path = \"../database/processed/acompanhamento_operacional_FE.csv\"\n",
+    "\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "print(\"Dataset carregado com sucesso!\")\n",
+    "print(\"Formato:\", df.shape)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2811d249",
+   "metadata": {},
+   "source": [
+    "# 2. Identificar Variáveis Numércias e Categóricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "87e97b28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div style=\"display: flex; gap: 50px; justify-content: left;\">\n",
+       "\n",
+       "    <div>\n",
+       "        <h3 style=\"text-align:center;\">Summary</h3>\n",
+       "        <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>qtde</th>\n",
+       "      <th>features</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>numerico</td>\n",
+       "      <td>22</td>\n",
+       "      <td>[qtde_itens, volume, peso, m3, fl_base, qtde_ocams, peso_cubado_rodoviario, horas_pre_conferencia, horas_distribuicao_cotas, horas_planejamento, horas_divisao_ocam, horas_coleta, horas_conferencia, horas_emissao, horas_analise_producao, horas_minuta, horas_exped_minuta, hora_analise_transporte, lead_time_total_horas, complexidade_operacional, pedido_grande_flag, processo_longo_flag]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>categorico</td>\n",
+       "      <td>6</td>\n",
+       "      <td>[sigla_cliente, tipo_veiculo, uf, representante, flag_entrega_agendada, modalidade]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "    </div>\n",
+       "\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "TARGET = \"fl_atraso_cli\"\n",
+    "\n",
+    "# Remover target para análise inicial\n",
+    "cols = df.columns.tolist()\n",
+    "\n",
+    "num_cols = df.select_dtypes(include=['int64','float64']).columns.tolist()\n",
+    "num_cols = [c for c in num_cols if c != TARGET]\n",
+    "\n",
+    "cat_cols = df.select_dtypes(include=['object']).columns.tolist()\n",
+    "\n",
+    "# Cria o DataFrame-resumo\n",
+    "df_summary = pd.DataFrame({\n",
+    "    'tipo': ['numerico', 'categorico'],\n",
+    "    'qtde': [len(num_cols), len(cat_cols)],\n",
+    "    'features': [num_cols, cat_cols]\n",
+    "})\n",
+    "\n",
+    "html = f\"\"\"\n",
+    "<div style=\"display: flex; gap: 50px; justify-content: left;\">\n",
+    "\n",
+    "    <div>\n",
+    "        <h3 style=\"text-align:center;\">Summary</h3>\n",
+    "        {df_summary.to_html(index=True)}\n",
+    "    </div>\n",
+    "\n",
+    "</div>\n",
+    "\"\"\"\n",
+    "\n",
+    "display(HTML(html))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ds_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
