--- a/notebooks/03_preprocessing_pipeline.ipynb
+++ b/notebooks/03_preprocessing_pipeline.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "8e71946c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "fd588b5e",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "87e97b28",
    "metadata": {},
    "outputs": [
@@ -409,6 +409,280 @@
     "\"\"\"\n",
     "\n",
     "display(HTML(html))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76e35b41",
+   "metadata": {},
+   "source": [
+    "# 3. Estratégia de Imputação (numéricas e categóricas)\n",
+    "\n",
+    "**Descrição:** a estratégia de imputação refere-se aos métodos usados para preencher valores ausentes (dados faltantes) em um conjunto de dados. A escolha do método depende do tipo de dados (numéricos ou categóricos), do volume de dados faltantes e do padrão de ausência, visando minimizar o viés e maximizar a precisão do modelo final.\n",
+    "\n",
+    "**Estratégias recomendadas:**\n",
+    "- **Numéricas:** Usar median por ser robusto contra outliers e a mediana não é afetada por caudas pesadas.\n",
+    "- **Categóricas:** Usar most_frequent (moda), pois evita criar categoria artificial, mantém coerência sendo o padrão mais recomendado para categorias como UF, modalidade, sigla do cliente etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "72281342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imputadores definidos com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imputação numérica: mediana -> robusta a outliers\n",
+    "numeric_imputer = SimpleImputer(strategy=\"median\")\n",
+    "\n",
+    "# Imputação categórica: moda -> mantém consistência\n",
+    "categorical_imputer = SimpleImputer(strategy=\"most_frequent\")\n",
+    "\n",
+    "print(\"Imputadores definidos com sucesso!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "468bfb5b",
+   "metadata": {},
+   "source": [
+    "# 4. Codificação Categórica (OneHot Encoding)\n",
+    "\n",
+    "**Descrição:** A etapa de codificação categórica transforma variáveis textuais em representações numéricas adequadas para modelos de Machine Learning.  \n",
+    "Modelos matemáticos não conseguem interpretar textos como “SP”, “Rodoviário”, “HR” ou “Cliente X”. Por isso, utilizamos o OneHotEncoder, que converte cada categoria em uma coluna binária (0 ou 1).\n",
+    "\n",
+    "**Usando OneHotEncoder:** \n",
+    "É o método mais seguro e universal para modelos clássicos, como Regressão Logística, Árvores, Random Forest e Gradient Boosting.  \n",
+    "- **O parâmetro handle_unknown=\"ignore\"** evita falhas durante o deploy caso surja uma categoria nova.  \n",
+    "- **O parâmetro sparse_output=False** permite visualizar o dataframe transformado em formato denso, facilitando debug, salvamento e inspeção.  \n",
+    "\n",
+    "**Benefícios:**\n",
+    "\n",
+    "- Elimina a escala arbitrária de categorias.\n",
+    "- Evita ordinalidade falsa (ex.: SP > RJ?).\n",
+    "- Permite ao modelo capturar relações específicas entre categorias e o atraso.\n",
+    "- Torna o pipeline mais robusto para uso em produção."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2fa3f68e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OneHotEncoder configurado!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Encoding Categórico (OneHot)\n",
+    "categorical_encoder = OneHotEncoder(\n",
+    "    handle_unknown=\"ignore\",\n",
+    "    sparse_output=False\n",
+    ")\n",
+    "\n",
+    "print(\"OneHotEncoder configurado!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db285868",
+   "metadata": {},
+   "source": [
+    "# 5. Scaling (Padronização das Variáveis Numéricas)\n",
+    "\n",
+    "**Descrição:** A padronização é uma etapa fundamental na preparação dos dados, especialmente para modelos sensíveis à escala das variáveis. Neste projeto, utilizamos o StandardScaler, que transforma todas as variáveis numéricas para uma escala comum, com média 0 e desvio padrão 1.\n",
+    "\n",
+    "**Motivações para o uso do StandardScaler:**\n",
+    "- Variáveis como volume, peso e horas operacionais possuem escalas muito diferentes.\n",
+    "- Modelos como Regressão Logística, SVM, KNN e Redes Neurais exigem escalas comparáveis para funcionar adequadamente.\n",
+    "- A padronização evita que o modelo interprete erroneamente variáveis com escala maior como sendo mais importantes.\n",
+    "\n",
+    "**Vantagens:**\n",
+    "- Aumenta a estabilidade numérica do modelo.\n",
+    "- Melhora a convergência de algoritmos baseados em gradiente.\n",
+    "- Reduz o viés provocado por features com magnitude exagerada.\n",
+    "\n",
+    "Assim como no imputer e no encoder, aqui configuramos o StandardScaler, mas sua aplicação real acontece somente dentro do Pipeline, durante o .fit(), garantindo transformação consistente tanto no treino quanto na inferência."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "225a16be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaler definido!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Scaling numérico\n",
+    "numeric_scaler = StandardScaler()\n",
+    "\n",
+    "print(\"Scaler definido!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34cefbd7",
+   "metadata": {},
+   "source": [
+    "# 6. ColumnTransformer — Unindo o Processo\n",
+    "\n",
+    "**Descrição:** Após definir os componentes individuais (imputers, encoder e scaler), esta etapa consolida todos esses elementos dentro de um único bloco de pré-processamento usando o ColumnTransformer.\n",
+    "\n",
+    "Cada grupo de variáveis (numéricas e categóricas) recebe seu próprio pipeline especializado:\n",
+    "\n",
+    "**Pipeline Numérico:**\n",
+    "- Imputação por mediana\n",
+    "- Padronização com StandardScaler\n",
+    "\n",
+    "**Ppeline Categórico:**\n",
+    "- Iputação por moda\n",
+    "- Codificação com OneHotEncoder\n",
+    "\n",
+    "O ColumnTransformer garante que cada transformação seja aplicada apenas ao tipo correto de variável, preservando integridade, modularidade e reprodutibilidade do pipeline.  \n",
+    "A aplicação prática das transformações ocorrerá somente no momento do fit() do modelo, onde o pipeline executa imputação, codificação e escala em um só fluxo, produzindo dados consistentes tanto no treino quanto na inferência."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d84ac67e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ColumnTransformer criado com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Construção do ColumnTransformer\n",
+    "preprocess = ColumnTransformer(transformers=[\n",
+    "    (\"num_pipeline\", Pipeline(steps=[\n",
+    "        (\"imputer\", numeric_imputer),\n",
+    "        (\"scaler\", numeric_scaler)\n",
+    "    ]), num_cols),\n",
+    "\n",
+    "    (\"cat_pipeline\", Pipeline(steps=[\n",
+    "        (\"imputer\", categorical_imputer),\n",
+    "        (\"encoder\", categorical_encoder)\n",
+    "    ]), cat_cols)\n",
+    "])\n",
+    "\n",
+    "print(\"ColumnTransformer criado com sucesso!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b0ed688",
+   "metadata": {},
+   "source": [
+    "# 7. Split Train/Test\n",
+    "\n",
+    "**Descrição:** Nesta etapa, dividimos o dataset em dois subconjuntos principais:\n",
+    "\n",
+    "**Treino (70%):** Usado para ajustar o pipeline de pré-processamento e treinar os modelos.\n",
+    "\n",
+    "**Teste (20%):** Usado apenas após a modelagem, para medir o desempenho real do modelo em dados nunca vistos.\n",
+    "\n",
+    "Utilizamos stratify=y para manter a proporção original de atrasos/não atrasos, garantindo que o conjunto de treino e teste representem adequadamente o problema.\n",
+    "\n",
+    "Essa separação impede vazamento de informação e garante avaliação honesta da performance dos modelos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f29c776a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split realizado!\n",
+      "Treino: (341878, 28)\n",
+      "Teste: (146520, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7. Train/Test Split\n",
+    "X = df.drop(columns=[TARGET])\n",
+    "y = df[TARGET]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.30,\n",
+    "    random_state=42,\n",
+    "    stratify=y\n",
+    ")\n",
+    "\n",
+    "print(\"Split realizado!\")\n",
+    "print(\"Treino:\", X_train.shape)\n",
+    "print(\"Teste:\", X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de63e121",
+   "metadata": {},
+   "source": [
+    "# 8. Pipeline Final (Pré-processamento completo)\n",
+    "\n",
+    "**Descrição:** Nesta etapa construímos o pipeline completo de modelagem, combinando:\n",
+    "\n",
+    "- imputação de valores ausentes\n",
+    "- codificação categórica (OneHotEncoder)\n",
+    "- padronização de variáveis numéricas\n",
+    "- integração via ColumnTransformer\n",
+    "\n",
+    "O uso de um Pipeline garante reprodutibilidade, prevenção de vazamento de informação e padronização do fluxo de transformação.\n",
+    "Agora, quando executarmos .fit(), todo o pré-processamento será aplicado automaticamente antes do treinamento do modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "09220ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline de pré-processamento pronto!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8. Pipeline Final de Pré-processamento\n",
+    "pipeline_preprocess = Pipeline(steps=[\n",
+    "    (\"preprocess\", preprocess)\n",
+    "])\n",
+    "\n",
+    "print(\"Pipeline de pré-processamento pronto!\")"
    ]
   }
  ],
