Eta de Modelagem finalizada -> 04_modelagem.ipynb finalizado.

--- a/notebooks/03_preprocessing_pipeline.ipynb
+++ b/notebooks/03_preprocessing_pipeline.ipynb
@@ -5,7 +5,7 @@
    "id": "150608e0",
    "metadata": {},
    "source": [
-    "# 03 - ré-Processamento e Construção do Pipeline (scikit-learn)\n",
+    "# 03 - Pré-Processamento e Construção do Pipeline (scikit-learn)\n",
     "\n",
     "<a href=\"../README.md\" title=\"Voltar para a página principal\">\n",
     "🏠 Voltar para Home\n",
@@ -683,6 +683,20 @@
     "])\n",
     "\n",
     "print(\"Pipeline de pré-processamento pronto!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f6c0f8c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "<div align=\"left\">\n",
+    "  <a href=\"#topo\" title=\"Voltar ao início do README\">⬆️ Topo</a>\n",
+    "</div>\n",
+    "\n",
+    "---"
    ]
   }
  ],
