Projeto finalizado até a modelagem e avaliação -> requirements.txt -> conclusao.md ->ds-otif-detection.pdf -> ds-otif-detection.pptx

--- a/notebooks/04_modelagem.ipynb
+++ b/notebooks/04_modelagem.ipynb
@@ -1197,7 +1197,55 @@
    "id": "58b25431",
    "metadata": {},
    "source": [
-    "# 9. Tratamento de Desbalanceamento (Class Weights e SMOTE)"
+    "# 9. Tratamento de Desbalanceamento (Class Weights e SMOTE)\n",
+    "\n",
+    "**Descrição:** O **tratamento de desbalanceamento de classes** é crucial em *Machine Learning* para evitar que o modelo seja enviesado para a classe majoritária.\n",
+    "Duas técnicas comuns são **Class Weights (Pesos de Classe)** e **SMOTE (Synthetic Minority Over-sampling Technique)**, que abordam o problema de maneiras diferentes.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Class Weights (Pesos de Classe)\n",
+    "\n",
+    "É um ajuste no algoritmo de treinamento que **atribui um peso maior aos exemplos da classe minoritária** e um peso menor aos da classe majoritária.\n",
+    "\n",
+    "### Como funciona\n",
+    "\n",
+    "Durante o cálculo da **função de perda (*loss function*)**, os erros cometidos nas predições da classe minoritária têm um impacto maior,\n",
+    "forçando o modelo a prestar mais atenção nessas instâncias e a aprender seus padrões de forma mais eficaz.\n",
+    "\n",
+    "### Vantagens\n",
+    "\n",
+    "* Não altera o conjunto de dados original, evitando a criação de dados sintéticos que possam introduzir ruído.\n",
+    "* É **computacionalmente eficiente** e fácil de implementar na maioria dos frameworks de ML (como o parâmetro `class_weight` no *scikit-learn*).\n",
+    "* Funciona bem com algoritmos que suportam pesos de classe, como **Random Forest**, **SVM** e **redes neurais**.\n",
+    "\n",
+    "### Desvantagens\n",
+    "\n",
+    "* A eficácia depende do algoritmo utilizado e da configuração correta dos pesos.\n",
+    "* Pode não ser suficiente em **casos de desbalanceamento extremo**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## SMOTE (Synthetic Minority Over-sampling Technique)\n",
+    "\n",
+    "É uma técnica de **oversampling** que cria **novas amostras sintéticas da classe minoritária**, em vez de simplesmente duplicar as existentes.\n",
+    "\n",
+    "### Como funciona\n",
+    "\n",
+    "Para cada exemplo da classe minoritária, o **SMOTE** identifica seus **vizinhos mais próximos (k-nearest neighbors)**.\n",
+    "Em seguida, novos pontos sintéticos são gerados **ao longo das linhas que conectam o exemplo original a seus vizinhos**,\n",
+    "usando **interpolação linear**.\n",
+    "\n",
+    "### Vantagens\n",
+    "\n",
+    "* Introduz **mais variedade** à classe minoritária do que a simples duplicação, ajudando a prevenir *overfitting*.\n",
+    "* Cria um conjunto de dados **mais equilibrado**, permitindo que o modelo aprenda igualmente a partir de ambas as classes.\n",
+    "\n",
+    "### Desvantagens\n",
+    "\n",
+    "* Pode ser **computacionalmente mais custoso** do que o ajuste de pesos, pois envolve a criação de novos dados.\n",
+    "* Pode **gerar ruído** se a classe minoritária já for ruidosa ou se os parâmetros (como o número de vizinhos) não forem bem ajustados.\n",
+    "* Deve ser aplicado **apenas no conjunto de treino**, **nunca no de teste**, para evitar resultados enganosos."
    ]
   },
   {
